<resources>
    <string name="app_name">Ruua: Remote Work Assistant</string>
    <string name="title_activity_user_fragmented">UserFragmentedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Field</string>
    <string name="tab_text_2">Supervisor</string>
    <string name="tab_text_3">Admin</string>
    <string name="default_edit_text_address"> ADDRESS HERE</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="sorting">Sort By:</string>
    <string name="last_name_label">Last</string>
    <string name="first_name_label">First</string>

</resources>
