<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressListActivity">

    <!--top layer-->
    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sorting"
        android:textSize="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>
    <Button
        android:id="@+id/button_sort_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name_label"
        android:layout_toRightOf="@id/textview1"/>
    <Button
        android:id="@+id/button_sort_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name_label"
        android:layout_toRightOf="@id/button_sort_last"/>

    <!--body-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_address_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_sort_first">
    </android.support.v7.widget.RecyclerView>

</RelativeLayout>