<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment class="afrayedknott.github.com.ruua.AddressEditorFragment"
        android:id="@+id/titles"
        android:layout_weight="1"
        android:layout_width="0px"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/edittext_address_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_edit_text_address"
        android:layout_toRightOf="@+id/button_back"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_toRightOf="@+id/edittext_address_input"
        android:layout_alignParentTop="true"/>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        tools:context=".AddressEditorFragment"
        android:layout_alignParentBottom="true">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AddressEditorFragment" />

    </FrameLayout>

</RelativeLayout>